# MoE-Infinity

./: .clang-format  .gitignore  .pre-commit-config.yaml  CITATIONS.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  environment.yml  matrix_build.sh  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-test.yml  publish-test.yml  publish.yml
core/aio/: archer_aio_thread.cpp  archer_aio_thread.h  archer_aio_threadpool.cpp  archer_aio_threadpool.h  archer_aio_utils.cpp  archer_aio_utils.h  archer_prio_aio_handle.cpp  archer_prio_aio_handle.h  archer_tensor_handle.cpp  archer_tensor_handle.h  archer_tensor_index.cpp  archer_tensor_index.h
core/base/: copyable.h  countdown_latch.cc  countdown_latch.h  current_thread.h  date.cc  date.h  exception.cc  exception.h  file_util.cc  file_util.h  log_file.cc  log_file.h  log_stream.cc  log_stream.h  logging.cc  logging.h  noncopyable.h  process_info.cc  process_info.h  string_piece.h  thread.cc  thread.h  thread_pool.cc  thread_pool.h  timestamp.cc  timestamp.h  timezone.cc  timezone.h  types.h
core/common/: pytorch.h  status.h  time.h  types.h
core/engine/: h2d_engine.h
core/memory/: device_caching_allocator.cpp  (+10 more)
examples/: interface_example.py  readme_example.py
moe_infinity/: __init__.py
op_builder/: __init__.py  all_ops.py  builder.py  prefetch.py
tests/: test_oai_chat_completions.py  test_oai_completions.py
tests/queues/: CMakeLists.txt  test_lockfree_queue.cpp  test_threadsafe_queue.cpp
(+80 files in other folders)
